# CrazySpace2

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
game/: CMakeLists.txt
game/include/: cs2_background.h  cs2_common.h  cs2_engine_listener.h  cs2_game.h  cs2_game_scene.h  cs2_input.h  cs2_interface.h  cs2_main_menu.h  cs2_missle.h  cs2_object.h  cs2_ship.h  cs2_stars.h  cs2_utils.h  cs2_weapoon.h  cs2_widgets.h
game/src/: cs2_background.cpp  cs2_engine_listener.cpp  cs2_game.cpp  cs2_game_scene.cpp  cs2_input.cpp  cs2_interface.cpp  cs2_main_menu.cpp  cs2_missle.cpp  cs2_object.cpp  cs2_ship.cpp  cs2_stars.cpp  cs2_utils.cpp  cs2_weapoon.cpp  cs2_widgets.cpp  world.cpp
loader/pc/: CMakeLists.txt
loader/pc/src/: main.cpp
media/cs2/materials/: draw_panel.json  env_image.json  menu.json  menu_button.json  menu_button_exit.json  menu_button_new_game.json  menu_button_resume.json  menu_panel.json  stars_particles.json
media/cs2/objects/: draw_panel.json  env_image.json  menu.json  menu_button.json  menu_button_exit.json  menu_button_new_game.json  menu_button_resume.json  menu_panel.json  stars.json
media/cs2/scenes/: env.json  main_menu.json  stars.json
media/cs2/shaders/json/: points_particles.json  solid_shape.json  textured_shape.json
media/cs2/shaders/sources/: points_particles.gs  points_particles.ps  points_particles.vs  solid_shape.ps  solid_shape.vs  textured_shape.ps  textured_shape.vs  tri_to_points.gs
media/cs2/textures/json/: background1.json  box1.json  box2.json
media/models/: models.blend
media/models/ships/: arc.3ds  swift.3ds
